--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 selenium==4.23.1
 python-dotenv==1.0.1
-requests==0.14.2
+requests~=2.32.3
+pandas~=2.0.3
+openpyxl~=3.1.5
+opencv-python~=4.6.0.66
+numpy~=2.0.1
+matplotlib~=3.7.1
